fix some deprecations and start using generics properly